--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -95,11 +95,9 @@ header {
 }
 
 section.about {
-
     margin: auto;
     margin-top: -100px;
 }
-
 
 .about {
     background-color: white;
@@ -127,17 +125,21 @@ section.about {
 }
 
 .about-text {
-    width: 400px;
-    font-size: 2em;
+    width: 40%;
+    font-size: 1.8em;
+}
+
+.about-text p {
+    margin-bottom: 20px;
 }
 
 .about-image {
     display: flex;
     flex-direction: column;
+    width: 40%;
 }
 
 .about-image > img {
-    width: 500px;
     padding: 20px;
 }
 
@@ -147,6 +149,7 @@ section.about {
     justify-content: space-around;
     text-align: center;
     margin: auto;
+    padding-bottom: 50px;
 }
 
 .particip-foto {
@@ -183,7 +186,7 @@ section.about {
 
 
 .bola img {
-    width: 85%;
+    width: 90%;
     height: 80%;
     border-radius: 50%;
     position: relative;
@@ -212,7 +215,7 @@ section.about {
 }
 
 .particip-foto > img {
-    width: 80px;
+    width: 50px;
     padding-bottom: 10px;
     margin-left: 400px;
     margin-bottom: -70px;
@@ -242,16 +245,16 @@ section.about {
 
 .image-times {
     background-color: #292862;
-    height: 50px;
+    height: 60px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .image-times img{
-    width: 30px;
-    height: 70%;
-    padding-left: 30px;
+    width: 50px;
+    height: 40px;
+    padding: 4px;
 }
 
 .escolhas {
@@ -270,4 +273,119 @@ section.about {
     border-radius: 50%;
     cursor: pointer;
     margin: 8px;
+}
+
+.quatro {
+    height: 100%;
+    background-color: white;
+    margin: auto;
+}
+
+.thumb {
+    text-align: center;
+    margin-bottom: -240px;
+    margin-right: 380px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.thumb > iframe {
+    width: 400px;
+    height: 200px;
+    border-radius: 15px;
+}
+
+.thumb span {
+    font-size: 2em;
+    padding: 5px;
+    color: #b207eb;
+}
+
+.thumb button {
+    font-family: "League Gothic", sans-serif;
+    width: 20%;
+    height: 40px;
+    font-size: 1.5em;
+    color: white;
+    background-image: linear-gradient(to left, #6828a8, black);
+    border: 0;
+    border-radius: 5px;
+    margin: 5px;
+}
+
+.thumb p {
+    width: 50%;
+    font-size: 1.6em;
+}
+
+.titulo {
+    text-align: center;
+    font-size: 3em;
+    padding: 30px;
+}
+
+.princip-prog {
+    margin: auto;
+    width: 70%;
+    height: 300px;
+    border: 2px solid black;
+    border-radius: 30px;
+}
+
+.calendario {
+    float: right;
+    width: 400px;
+    height: 300px;
+    background-image: linear-gradient(to bottom, #6828a8, black);
+    border-radius: 0px 25px 25px 0px;
+    overflow: hidden;
+    position: relative;
+}
+
+.carrossel-dias {
+    margin: auto;
+    display: flex;
+    width: 50%;
+}
+
+.dia {
+    font-size: 45px;
+    width: 100%;
+    text-align: center;
+    padding: 20px;
+    box-sizing: border-box;
+    color: white;
+}
+
+.cal {
+    background-color: transparent;
+    border: 0;
+    cursor: pointer;
+}
+
+.cal ion-icon {
+    font-size: 30px;
+    color: white;
+}
+
+hr {
+    margin: auto;
+    width: 80%;
+}
+
+#anterior {
+    left: 0;
+}
+
+#proximo {
+    right: 0;
+}
+  
+#programas {
+    margin: auto;
+    padding-top: 40px;
+    width: 80%;
+    font-size: 2em;
+    color: white;
 }
